# bd2-projeto-final

./: .dockerignore  .env  .gitignore  DDL.sql  Dockerfile  README.md  countries.json  docker-compose.yml  empresa_fake.py  generate_seed_csvs.py  main.py  projeto-final-enunciado.md  pyproject.toml  requirements.txt  verify_generation.py
scripts/: build.sh  clean.sh  reset.sh  run.sh
scripts/linux/: 0-easy-run.sh  1-run-containers.sh  2-load-data.sh  3-run-queries.sh  build.sh  clean.sh  load-data.sh  reset.sh  rodar_queries.sh  run.sh  test-banco.sh  test-shards.sh  test-triggers.sh  test-virtual-columns.sh
scripts/windows/: 0-easy-run.bat  1-run-containers.bat  2-load-data.bat  3-run-queries.bat  4-clean-containers.bat  build.bat  clean.bat  load-data.bat  reset.bat  run-queries.bat  run.bat  test-banco.bat  test-triggers.bat
sql/: DDL-streamers-optimization.sql  DDL-streamers.sql  debug_mv.sql  dump-postgres-202510300426.sql  dump-streamers.sql  execute_queries.sql  import_all.sql  queries.sql  queries_5e6.sql  queries_otimizadas.sql  sla.pgerd  streamers-DUMP.sql  test-compara-q8.sql  test-triggers.sql
sql/migrations/: 0001_adicionar_ids.sql
src/: banco.py  canal_fake.py  conversao_fake.py  dado_fake.py  empresa_fake.py  empresa_pais_fake.py  logger_setup.py  main.py  pais_fake.py  patrocinio_fake.py  plataforma_fake.py  plataforma_usuario_fake.py  streamer_pais_fake.py  usuario_fake.py
src/banco/: __init__.py  banco.py  csv_utils.py
src/fake/: bitcoin_fake.py  canal_fake.py  cartao_credito.py  combinacoes.py  comentario_fake.py  conversao_fake.py  (+17 more)
