[project]
name = "bd2-projeto-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy>=1.8.17",
    "faker>=37.12.0",
    "psycopg[binary]>=3.2.12",
    "python-dotenv>=1.2.1",
    "uv>=0.9.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.3",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 160

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
